correção readme e pom.xml